--- a/EmployeePerformanceApp.csproj
+++ b/EmployeePerformanceApp.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Services\User\" />
+    <Folder Include="wwwroot\image\" />
   </ItemGroup>
 
 </Project>
